# mjpg-streamer

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  build_for_ultimaker.sh  run_viewer.sh
.github/workflows/: build.yml
debian/: changelog  control  copyright  rules
mjpg-streamer-experimental/: CMakeLists.txt  mjpg_streamer.c
mjpg-streamer-experimental/plugins/output_qrscanner/: ARCHITECTURE.md  README.md  output_qrscanner.c
src/: jpeg_utils.c  jpeg_utils.h  mjpg_streamer.c  mjpg_streamer.h  utils.c  utils.h
src/cmake/: mjpg_streamer_utils.cmake
src/plugins/: input.h
src/plugins/input_avf/: CMakeLists.txt  input_avf.h  input_avf.m
src/plugins/input_control/: input_uvc.c
src/plugins/input_file/: CMakeLists.txt  README.md  input_file.c
src/plugins/input_http/: input_http.c
src/plugins/input_opencv/: CMakeLists.txt  input_opencv.cpp
src/plugins/input_ptp2/: CMakeLists.txt
src/plugins/input_raspicam/: CMakeLists.txt  input_raspicam.c
src/plugins/input_uvc/: CMakeLists.txt  README.md  input_uvc.c  input_uvc_jpeg.h  jpeg_utils.c  jpeg_utils.h  v4l2uvc.c  v4l2uvc.h
src/plugins/output_file/: CMakeLists.txt  README.md  output_file.c
src/plugins/output_http/: CMakeLists.txt  README.md  httpd.c  httpd.h  output_http.c
src/plugins/output_motion/: CMakeLists.txt  README.md  output_motion.c
src/plugins/output_qrscanner/: CMakeLists.txt  output_qrscanner.h
src/plugins/output_qrscanner/examples/: create_test_images.py  qr_handler.sh
src/plugins/output_rtsp/: CMakeLists.txt  README.md  output_rtsp.c  output_rtsp_old.c  rtsp_http_proxy.c  rtsp_server.c  rtsp_simple.c
src/plugins/output_udp/: output_udp.c
src/plugins/output_viewer/: CMakeLists.txt  output_viewer.c
src/plugins/output_viewer_osx/: AppDelegate.m  CMakeLists.txt  output_viewer_osx.m
src/plugins/output_viewer_osx_app/: OSXViewer
src/plugins/output_zmqserver/: output_zmqserver.c
src/www/: index.html
